--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title>Promise test</title>
     <script>
         const p = new Promise((resolve, reject) => {
-            // resolve('ok') // 状态为fulfilled
-            // reject('error') // 状态为rejected
-            throw 'Error' // 状态为rejected
+            setTimeout(() => {
+                reject('error')
+            }, 1000)
         })
 
         p.then(res => {
             console.log(res) // 输出promiseResult中的结果
+        }, err => {
+            console.log(err) // 输出报错信息
         })
     </script>
 </head>
