Promise指定多个回调时都要执行的处理

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         }, err => {
             console.log(err) // 输出报错信息
         })
+
+        p.then(res => {
+            console.log(res) // 输出promiseResult中的结果
+        }, err => {
+            console.log(err) // 输出报错信息
+        })
     </script>
 </head>
 <body>
