--- a/index.html
+++ b/index.html
@@ -3,24 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Promise test</title>
+<!--    <script src="./promise.js"></script>-->
     <script>
         const p = new Promise((resolve, reject) => {
-            setTimeout(() => {
-                reject('error')
-            }, 1000)
+            reject('error')
         })
 
-        p.then(res => {
+        const data = p.then(res => {
             console.log(res) // 输出promiseResult中的结果
         }, err => {
-            console.log(err) // 输出报错信息
+            throw 'error'
         })
-
-        p.then(res => {
-            console.log(res) // 输出promiseResult中的结果
-        }, err => {
-            console.log(err) // 输出报错信息
-        })
+        console.log(data, '/////data///')
     </script>
 </head>
 <body>
