--- a/examples/debounce.html
+++ b/examples/debounce.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Throttle</title>
+  <title>Debounce</title>
   <style>
     div { height: 200vh }
   </style>
 </head>
 <body>
   <div></div>
-  <script src="../exercises/throttle.js"></script>
+  <script src="../exercises/debounce.js"></script>
   <script>
-    const cb = throttle(function () { console.log('-------throttle---------') }, 1000)
+    const cb = debounce(function () { console.log('-----debounce------') }, 1000)
     document.addEventListener('scroll', cb)
   </script>
 </body>
